2006-12-04  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>
	
	* unichrome/via_driver.c:
 	
        Added patch submitted by Gabriel Mansi 
	<gabriel-dot-mansi-at-gmail-dot-com> to fix the K8M890 hang on 
	VT switch.

2006-11-30  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>
	
	* unichrome/via_mode.c:
	* unichrome/via_accel.c:
 	
        Added patch submitted by Gabriel Mansi 
	<gabriel-dot-mansi-at-gmail-dot-com> to fix some of the K8M890
	logic.

2006-11-28  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>
	
	* unichrome/via_bandwidth.c:
	* unichrome/via_accel.c:
 	
	Patched via_bandwidth.c for dumb mistake I made thanks Gabriel Mansi 
        For the second set of eyes.  Move HWCursor memory allocation even 
        further in the driver initialization. 

2006-11-25  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>
	
	* unichrome/via_id.c:
	* unichrome/via_accel.c:
 	
	Added additional ID's for the K8M890 cards
        Changed memory allocation order for the HW cursor and 2d engine. 

2006-10-29  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* libxvmc/viaLowLevel.c:
	* libxvmc/viaLowLevelPro.c:
	* unichrome/via_regs.h:

	Via managed to mix up the 2D / 3D engine busy status bits.
	Funny we never noticed this before.

2006-09-22  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>

	* unichrome/via_id.h
	* unichrome/via_video.c
	* unichrome/via_mode.c
	* unichrome/via_mode.h
	* unichrome/via_driver.c
	* unichrome/via_swov.c
	* unichrome/via_bandwidth.c
	* unichrome/via_accel.c
	* unichrome/via_vbe.c
	* unichrome/via_xvmc.c
	* unichrome/via_id.c

	Initial code for support of VT3336 cards	

2006-09-25  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* unichrome/Makefile.am:

	Mention the overall revision number in the log, not just
	the driver code revision.

2006-09-24  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com>

	* libxvmc/viaLowLevel.c: (initXvMCLowLevel):
	* libxvmc/viaLowLevelPro.c: (initXvMCLowLevel):