@@ -1,3 +1,10 @@
+2006-12-05  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>
+	
+	* unichrome/via_video.c:
+	* unichrome/via_swov.c:
+ 	
+	Added missing hardware overlay support for VT3336
+
 2006-12-04  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>
 	
 	* unichrome/via_driver.c:
